<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_settings">

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.devposapp2.ui.orders.OrdersFragment"
        android:label="@string/title_orders"

        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_reservations"
        android:name="com.example.devposapp2.ui.reservations.ReservationFragment"
        android:label="@string/title_reservations"
        tools:layout="@layout/fragment_reservations" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.devposapp2.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>