<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/gray"
        tools:context=".ui.orders.OrderDetails">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="20">

            <LinearLayout
                android:id="@+id/header_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:background="@color/nightSkyBlue"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"

                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:background="@drawable/devoret_logo"
                        android:foregroundGravity="clip_horizontal" />

                    <TextView
                        android:id="@+id/full_name"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:text="LOGIN"
                        android:textColor="@color/offWhite"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="NotSibling" />

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:fontFamily="@font/open_sans_regular"
                        android:gravity="center_horizontal"
                        android:text="You can manage your restaurant from here, by using your login credentials."
                        android:textColor="@color/offWhite"
                        android:textSize="12sp"
                        tools:ignore="NotSibling" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_num_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="11"
                android:background="@color/gray"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <EditText
                            android:id="@+id/verificationCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress" />

                        <EditText
                            android:id="@+id/editTextTextPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:ems="10"
                            android:hint="@string/password"
                            android:inputType="textPassword" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/checkBoxRememberMe"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/remember_me" />

                            <TextView
                                android:id="@+id/forgotPassword"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/open_sans_regular"
                                android:gravity="right"
                                android:text="@string/forgot_password"
                                android:textColor="@color/firoza"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <Button
                            android:id="@+id/submitButtonVerification"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="LOGIN"
                            android:textStyle="bold"
                            app:backgroundTint="@color/badami"
                            app:cornerRadius="0px" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="I agree to the Devorat T'C by using ROM App" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/footer"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/seventh_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/button_section"
                    android:layout_gravity="bottom"
                    android:background="@color/nightSkyBlue"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/paymentMethod"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="4"
                            android:fontFamily="@font/open_sans_regular"
                            android:gravity="center_horizontal"
                            android:text="Devoret Limited 2021. All right reseved."
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>